WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
279144
[SVG2] Fix `presentational hints` special cases where supported
https://bugs.webkit.org/show_bug.cgi?id=279144
Summary
[SVG2] Fix `presentational hints` special cases where supported
Ahmad Saleem
Reported
2024-09-04 14:10:27 PDT
Hi Team, This bug is to fix few special cases, where we should have presentational hints. WPT Test Case:
https://wpt.fyi/results/svg/styling/presentation-attributes-special-cases.html?label=master&label=experimental&aligned&q=svg%2Fstyling
Focusing on in this bug: transform presentation attribute supported on g patternTransform presentation attribute supported on pattern gradientTransform presentation attribute supported on linearGradient gradientTransform presentation attribute supported on radialGradient Just raising so I can fix it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-04 14:10:51 PDT
<
rdar://problem/135298525
>
Ahmad Saleem
Comment 2
2024-09-04 14:18:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33140
EWS
Comment 3
2024-09-05 10:39:22 PDT
Committed
283223@main
(a4e4545085fa): <
https://commits.webkit.org/283223@main
> Reviewed commits have been landed. Closing PR #33140 and removing active labels.
WebKit Commit Bot
Comment 4
2024-09-21 21:12:30 PDT
Re-opened since this is blocked by
bug 280141
Brent Fulgham
Comment 5
2025-08-05 16:45:27 PDT
This is now being tracked by: <
rdar://problem/157609073
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug